--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -16,11 +16,7 @@ $primary: hsl(152, 41%, 53%);
 
 #price .max-vyska {
   height: 16rem;
-  width: 18rem;
-}
-
-#gallery .max-vyska {
-  height: 80vh;
+  width: 100%;
 }
 
 .odst1 {
