--- a/style.css
+++ b/style.css
@@ -11872,11 +11872,7 @@ textarea.form-control-lg {
 
 #price .max-vyska {
   height: 16rem;
-  width: 18rem;
-}
-
-#gallery .max-vyska {
-  height: 80vh;
+  width: 100%;
 }
 
 .odst1 {
